--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
 
 bibtex-repo.bib.sav
 bibtex-repo.bib.bak
+
+
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
